--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -37,8 +37,6 @@
     "white = (255, 255, 255)\n",
     "gray = (211, 211, 211)\n",
     "black = (0, 0, 0)\n",
-    "blue = (0,0,255)\n",
-    "red = (255,0,0)\n",
     "\n",
     "#Font\n",
     "font = pygame.font.Font(None,32)\n",
@@ -138,7 +136,7 @@
     "    # Generate random noise\n",
     "    noise = np.random.randn(n_points)\n",
     "    \n",
-    "    # Generate y values that will have the desired correlation with x\n",
+    "    # Generate y values that will have the correct correlation with x\n",
     "    y = R * x + np.sqrt(1 - R**2) * noise\n",
     "    \n",
     "    return x, y\n",
@@ -154,25 +152,40 @@
     "    white = (255, 255, 255)\n",
     "    black = (0, 0, 0)\n",
     "    blue = (0, 0, 255)\n",
-    "    gray = (200, 200, 200)\n",
+    "    red = (255, 0, 0)\n",
     "\n",
     "    # Define font\n",
     "    font = pygame.font.Font(None, 36)\n",
     "\n",
     "    # Define input box\n",
-    "    input_box = pygame.Rect((width-500)-140, height-600, 140, 32)\n",
+    "    input_box = pygame.Rect(width-640, height-600, 140, 32)\n",
     "    color_inactive = pygame.Color('gray64')\n",
     "    color_active = pygame.Color('gray17')\n",
     "    color = color_inactive\n",
     "    active = False\n",
     "    text = '0.'\n",
     "\n",
+    "    # Initialize the correlation coefficient\n",
     "    R = random.randint(0, 100)/100\n",
     "    # Generate the points\n",
     "    x, y = generate_points_with_correlation(R)\n",
     "\n",
     "    # Define guess button\n",
+    "    guessing = True\n",
     "    guess_button = pygame.Rect(width-500, height-600, 100, 32)\n",
+    "    # Define next button\n",
+    "    next_button = pygame.Rect(width-640, height-600, 120, 32)\n",
+    "    # Define True R box \n",
+    "    true_R_box = pygame.Rect(width-640, height-550, 120, 32)\n",
+    "    # Define Guessed R box\n",
+    "    guessed_R_box = pygame.Rect(width-640, height-500, 120, 32)\n",
+    "    # Define difference box\n",
+    "    difference_box = pygame.Rect(width-640, height-450, 120, 32)\n",
+    "    # Define points box\n",
+    "    points_box = pygame.Rect(width-1330, height-720, 120, 32)\n",
+    "    current_points = 0\n",
+    "\n",
+    "    life_slots = 3\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
@@ -191,17 +204,55 @@
     "        # Plot newly generated points\n",
     "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
     "\n",
-    "        # Draw input box\n",
-    "        txt_surface = font.render(text, True, color)\n",
-    "        input_box.w = max(200, txt_surface.get_width() + 10)\n",
-    "        math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
-    "        pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "        # Draw the points box\n",
+    "        pygame.draw.rect(math_game_uno, white, points_box)\n",
+    "        points_text = font.render(\"Points: \"+ str(current_points), True, black)\n",
+    "        points_text_rect = points_text.get_rect(center=points_box.center)\n",
+    "        math_game_uno.blit(points_text, points_text_rect)\n",
     "\n",
-    "        # Draw guess button\n",
-    "        pygame.draw.rect(math_game_uno, blue, guess_button)\n",
-    "        guess_text = font.render(\"Guess\", True, white)\n",
-    "        guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
-    "        math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        # Draw life slots\n",
+    "        slot_width = 50\n",
+    "        slot_height = 20\n",
+    "        for i in range(3):\n",
+    "            color_box = red if i < life_slots else black\n",
+    "            pygame.draw.rect(math_game_uno, color_box, (width-1350 + i * slot_width + slot_width // 2, height-770, slot_width - 10, slot_height))\n",
+    "\n",
+    "        if guessing:\n",
+    "            # Draw input box\n",
+    "            pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "            txt_surface = font.render(text, True, color)\n",
+    "            input_box.w = max(200, txt_surface.get_width() + 10)\n",
+    "            math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
+    "\n",
+    "            # Draw guess button\n",
+    "            pygame.draw.rect(math_game_uno, blue, guess_button)\n",
+    "            guess_text = font.render(\"Guess\", True, white)\n",
+    "            guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
+    "            math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        else:\n",
+    "            # Draw next button\n",
+    "            pygame.draw.rect(math_game_uno, blue, next_button)\n",
+    "            next_text = font.render(\"Next\", True, white)\n",
+    "            next_text_rect = next_text.get_rect(center=next_button.center)\n",
+    "            math_game_uno.blit(next_text, next_text_rect)\n",
+    "\n",
+    "            # Draw True R box\n",
+    "            pygame.draw.rect(math_game_uno, white, true_R_box)\n",
+    "            true_R_text = font.render(\"True R: \" + str(R), True, black)\n",
+    "            true_R_text_rect = true_R_text.get_rect(center=true_R_box.center)\n",
+    "            math_game_uno.blit(true_R_text, true_R_text_rect)\n",
+    "\n",
+    "            # Draw Guessed R box\n",
+    "            pygame.draw.rect(math_game_uno, white, guessed_R_box)\n",
+    "            guessed_R_text = font.render(\"Guessed R: \"+ str(text), True, black)\n",
+    "            guessed_R_text_rect = guessed_R_text.get_rect(center=guessed_R_box.center)\n",
+    "            math_game_uno.blit(guessed_R_text, guessed_R_text_rect)\n",
+    "\n",
+    "            # Draw difference box\n",
+    "            pygame.draw.rect(math_game_uno, white, difference_box)\n",
+    "            difference_text = font.render(\"Difference: \"+ str(abs(R - float(text)))[:4], True, black)\n",
+    "            difference_text_rect = difference_text.get_rect(center=difference_box.center)\n",
+    "            math_game_uno.blit(difference_text, difference_text_rect)\n",
     "\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
@@ -216,32 +267,61 @@
     "                return\n",
     "            \n",
     "            # Primary code for the input box\n",
-    "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and guessing:\n",
     "                if input_box.collidepoint(event.pos):\n",
     "                    active = not active\n",
     "                else:\n",
     "                    active = False\n",
+    "\n",
     "                if guess_button.collidepoint(event.pos):\n",
-    "                    x, y = generate_points_with_correlation(float(text))\n",
-    "                    text = '0.'\n",
-    "\n",
-    "            color = color_active if active else color_inactive\n",
-    "\n",
-    "            if event.type == pygame.KEYDOWN:\n",
-    "                if active:\n",
-    "                    if event.key == pygame.K_RETURN:\n",
-    "                        if int(text[2:]) == int:\n",
-    "                            x, y = generate_points_with_correlation(float(text))\n",
-    "                            text = '0.'\n",
+    "                    try:\n",
+    "                        if float(text) <= 1:\n",
     "                            active = False\n",
+    "                            guessing = False\n",
+    "                            if abs(R - float(text)) < 0.1:\n",
+    "                                current_points += 1\n",
+    "                            else:\n",
+    "                                life_slots -= 1\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
-    "                            \n",
-    "                    elif event.key == pygame.K_BACKSPACE:\n",
-    "                        text = text[:-1]\n",
-    "                    else:\n",
-    "                        text += event.unicode\n",
+    "                    except:\n",
+    "                        print(\"fail\")\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "\n",
+    "            color = color_active if active else color_inactive\n",
+    "\n",
+    "            if event.type == pygame.KEYDOWN and active:\n",
+    "                if event.key == pygame.K_RETURN:\n",
+    "                    try:\n",
+    "                        if float(text) <= 1:\n",
+    "                            active = False\n",
+    "                            guessing = False\n",
+    "                            if abs(R - float(text)) < 0.1:\n",
+    "                                current_points += 1\n",
+    "                            else:\n",
+    "                                life_slots -= 1\n",
+    "                        else:\n",
+    "                            text = '0.'\n",
+    "                            active = False\n",
+    "                    except:\n",
+    "                        print(\"fail\")\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "                elif event.key == pygame.K_BACKSPACE:\n",
+    "                    text = text[:-1]\n",
+    "                else:\n",
+    "                    text += event.unicode\n",
+    "            \n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and not guessing:\n",
+    "                if next_button.collidepoint(event.pos):\n",
+    "                    R = random.randint(0, 100)/100\n",
+    "                    x, y = generate_points_with_correlation(R)\n",
+    "\n",
+    "                    guessing = True\n",
+    "                    text = '0.'\n",
+    "                    active = False\n",
     "\n",
     "        pygame.display.flip()\n",
     "        # Cap the frame rate to 60 fps\n",
@@ -281,7 +361,7 @@
     "    clock = pygame.time.Clock()\n",
     "    fps = 60  # Set the desired frames per second\n",
     "\n",
-    "    text = font_2.render(\"Choose a constant\", True, white)\n",
+    "    text = font_2.render(\"3.\", True, white)\n",
     "    n=3\n",
     "    \n",
     "    numberkeys ={\n",
@@ -293,32 +373,21 @@
     "            pygame.K_6: \"6\",\n",
     "            pygame.K_7: \"7\",\n",
     "            pygame.K_8: \"8\",\n",
-    "            pygame.K_9: \"9\",\n",
-    "            pygame.K_0: \"0\"\n",
+    "            pygame.K_9: \"9\"\n",
     "        }\n",
-    "    \n",
-    "    constants ={\n",
-    "        \"π\": \"3.14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460955058223172535940812848111745028410270193852110555964462294895493038196\",\n",
-    "        \"e\": \"2.71828182845904523536028747135266249775724709369995957496696762772407663035354759457138217852516642742746639193200305992181741359662904357290033429526059563073813232862794349076323382988075319525101901\",\n",
-    "        \"φ\": \"1.61803398874989484820458683436563811772030917980576286213544862270526046281890244970720720418939113748475408807538689175212663386222353693179318006076672635443338908659593958290563832266131992829026788\",\n",
-    "        \"√2\": \"1.41421356237309504880168872420969807856967187537694807317667973799073247846210703885038753432764157273501384623091229702492483605585073721264412149709993583141322266592750559275579995050115278206057147\",\n",
-    "        \"ln(2)\": \"0.69314718055994530941723212145817656807550013436025525412068000949339362196969471560586332699641868754200148102057068573368552023575813055703267075163507596193072757082837143519030703862389167347112335\" \n",
-    "    }\n",
-    "\n",
-    "    rects = []\n",
-    "\n",
-    "    for i in range(5):\n",
-    "        x = 2*i*(width/15) + width/5\n",
-    "\n",
-    "        rects.append((pygame.Rect(x,50,width/15,width/15),blue))\n",
     "\n",
     "    while True:\n",
     "        math_game_dos.fill(white)\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "        dropdown_dynamics(math_game_dos, dropdown, home_button, close_button)\n",
     "        \n",
-    "        button_checker = pygame.Rect(width/2-100, height/2-100, 400, 200)\n",
+    "        button_checker = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
     "        pygame.draw.rect(math_game_dos, black, button_checker,0, 30)\n",
+    "\n",
+    "        mp.dps = n + 2\n",
+    "        pi = str(mp.pi)\n",
+    "        pi_n = pi[n-1:n]\n",
+    "\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -329,40 +398,15 @@
     "                return\n",
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
-    "\n",
     "            # From here you can fuck around ~~~~~~~~~~~\n",
-    "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "                for i in range(len(rects)):\n",
-    "                    rect, color = rects[i]\n",
-    "                    if rects[i][0].collidepoint(mouse_x,mouse_y):\n",
-    "                        rects[i] = (rect,red)\n",
-    "                        number = list(constants.values())[i]\n",
-    "                        constant = list(constants.keys())[i]\n",
-    "                        n = 3\n",
-    "                        text = font_2.render(number[:n-1], True, white)\n",
-    "                        for j in range(len(rects)):\n",
-    "                            if j!= i:\n",
-    "                                rects[j]= (rects[j][0],blue)\n",
-    "            \n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if event.key in numberkeys:\n",
-    "                    if numberkeys[event.key] == number[n-1]:\n",
-    "                        text = font_2.render(number[:n], True, white)\n",
+    "                    if numberkeys[event.key] == pi_n:\n",
+    "                        text = font_2.render(str(pi[:n]), True, white)\n",
     "                        n += 1\n",
-    "                    else:\n",
-    "                        text = font_2.render(f\"You've correctly {n-3} decimals of {constant}\", True, white)\n",
-    "\n",
+    "        \n",
     "        text_math_2 = text.get_rect(center=button_checker.center)\n",
     "        math_game_dos.blit(text, text_math_2)\n",
-    "        \n",
-    "        for i in range(len(rects)):\n",
-    "            rect, color = rects[i]\n",
-    "            pygame.draw.rect(screen, color, rect)\n",
-    "\n",
-    "            label = list(constants.keys())[i]\n",
-    "            text_surface = font.render(label, True, (white))\n",
-    "            text_rect = text_surface.get_rect(center=rect.center)\n",
-    "            screen.blit(text_surface, text_rect) \n",
     "        \n",
     "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
