--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -12,6 +20,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -154,25 +170,40 @@
     "    white = (255, 255, 255)\n",
     "    black = (0, 0, 0)\n",
     "    blue = (0, 0, 255)\n",
-    "    gray = (200, 200, 200)\n",
+    "    red = (255, 0, 0)\n",
     "\n",
     "    # Define font\n",
     "    font = pygame.font.Font(None, 36)\n",
     "\n",
     "    # Define input box\n",
-    "    input_box = pygame.Rect((width-500)-140, height-600, 140, 32)\n",
+    "    input_box = pygame.Rect(width-640, height-600, 140, 32)\n",
     "    color_inactive = pygame.Color('gray64')\n",
     "    color_active = pygame.Color('gray17')\n",
     "    color = color_inactive\n",
     "    active = False\n",
     "    text = '0.'\n",
     "\n",
+    "    # Initialize the correlation coefficient\n",
     "    R = random.randint(0, 100)/100\n",
     "    # Generate the points\n",
     "    x, y = generate_points_with_correlation(R)\n",
     "\n",
     "    # Define guess button\n",
+    "    guessing = True\n",
     "    guess_button = pygame.Rect(width-500, height-600, 100, 32)\n",
+    "    # Define next button\n",
+    "    next_button = pygame.Rect(width-640, height-600, 120, 32)\n",
+    "    # Define True R box \n",
+    "    true_R_box = pygame.Rect(width-640, height-550, 120, 32)\n",
+    "    # Define Guessed R box\n",
+    "    guessed_R_box = pygame.Rect(width-640, height-500, 120, 32)\n",
+    "    # Define difference box\n",
+    "    difference_box = pygame.Rect(width-640, height-450, 120, 32)\n",
+    "    # Define points box\n",
+    "    points_box = pygame.Rect(width-1330, height-720, 120, 32)\n",
+    "    current_points = 0\n",
+    "\n",
+    "    life_slots = 3\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
@@ -191,17 +222,55 @@
     "        # Plot newly generated points\n",
     "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
     "\n",
-    "        # Draw input box\n",
-    "        txt_surface = font.render(text, True, color)\n",
-    "        input_box.w = max(200, txt_surface.get_width() + 10)\n",
-    "        math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
-    "        pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "        # Draw the points box\n",
+    "        pygame.draw.rect(math_game_uno, white, points_box)\n",
+    "        points_text = font.render(\"Points: \"+ str(current_points), True, black)\n",
+    "        points_text_rect = points_text.get_rect(center=points_box.center)\n",
+    "        math_game_uno.blit(points_text, points_text_rect)\n",
     "\n",
-    "        # Draw guess button\n",
-    "        pygame.draw.rect(math_game_uno, blue, guess_button)\n",
-    "        guess_text = font.render(\"Guess\", True, white)\n",
-    "        guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
-    "        math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        # Draw life slots\n",
+    "        slot_width = 50\n",
+    "        slot_height = 20\n",
+    "        for i in range(3):\n",
+    "            color_box = red if i < life_slots else black\n",
+    "            pygame.draw.rect(math_game_uno, color_box, (width-1350 + i * slot_width + slot_width // 2, height-770, slot_width - 10, slot_height))\n",
+    "\n",
+    "        if guessing:\n",
+    "            # Draw input box\n",
+    "            pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "            txt_surface = font.render(text, True, color)\n",
+    "            input_box.w = max(200, txt_surface.get_width() + 10)\n",
+    "            math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
+    "\n",
+    "            # Draw guess button\n",
+    "            pygame.draw.rect(math_game_uno, blue, guess_button)\n",
+    "            guess_text = font.render(\"Guess\", True, white)\n",
+    "            guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
+    "            math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        else:\n",
+    "            # Draw next button\n",
+    "            pygame.draw.rect(math_game_uno, blue, next_button)\n",
+    "            next_text = font.render(\"Next\", True, white)\n",
+    "            next_text_rect = next_text.get_rect(center=next_button.center)\n",
+    "            math_game_uno.blit(next_text, next_text_rect)\n",
+    "\n",
+    "            # Draw True R box\n",
+    "            pygame.draw.rect(math_game_uno, white, true_R_box)\n",
+    "            true_R_text = font.render(\"True R: \" + str(R), True, black)\n",
+    "            true_R_text_rect = true_R_text.get_rect(center=true_R_box.center)\n",
+    "            math_game_uno.blit(true_R_text, true_R_text_rect)\n",
+    "\n",
+    "            # Draw Guessed R box\n",
+    "            pygame.draw.rect(math_game_uno, white, guessed_R_box)\n",
+    "            guessed_R_text = font.render(\"Guessed R: \"+ str(text), True, black)\n",
+    "            guessed_R_text_rect = guessed_R_text.get_rect(center=guessed_R_box.center)\n",
+    "            math_game_uno.blit(guessed_R_text, guessed_R_text_rect)\n",
+    "\n",
+    "            # Draw difference box\n",
+    "            pygame.draw.rect(math_game_uno, white, difference_box)\n",
+    "            difference_text = font.render(\"Difference: \"+ str(abs(R - float(text)))[:4], True, black)\n",
+    "            difference_text_rect = difference_text.get_rect(center=difference_box.center)\n",
+    "            math_game_uno.blit(difference_text, difference_text_rect)\n",
     "\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
@@ -216,32 +285,61 @@
     "                return\n",
     "            \n",
     "            # Primary code for the input box\n",
-    "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and guessing:\n",
     "                if input_box.collidepoint(event.pos):\n",
     "                    active = not active\n",
     "                else:\n",
     "                    active = False\n",
+    "\n",
     "                if guess_button.collidepoint(event.pos):\n",
-    "                    x, y = generate_points_with_correlation(float(text))\n",
-    "                    text = '0.'\n",
-    "\n",
-    "            color = color_active if active else color_inactive\n",
-    "\n",
-    "            if event.type == pygame.KEYDOWN:\n",
-    "                if active:\n",
-    "                    if event.key == pygame.K_RETURN:\n",
-    "                        if int(text[2:]) == int:\n",
-    "                            x, y = generate_points_with_correlation(float(text))\n",
-    "                            text = '0.'\n",
+    "                    try:\n",
+    "                        if float(text) <= 1:\n",
     "                            active = False\n",
+    "                            guessing = False\n",
+    "                            if abs(R - float(text)) < 0.1:\n",
+    "                                current_points += 1\n",
+    "                            else:\n",
+    "                                life_slots -= 1\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
-    "                            \n",
-    "                    elif event.key == pygame.K_BACKSPACE:\n",
-    "                        text = text[:-1]\n",
-    "                    else:\n",
-    "                        text += event.unicode\n",
+    "                    except:\n",
+    "                        print(\"fail\")\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "\n",
+    "            color = color_active if active else color_inactive\n",
+    "\n",
+    "            if event.type == pygame.KEYDOWN and active:\n",
+    "                if event.key == pygame.K_RETURN:\n",
+    "                    try:\n",
+    "                        if float(text) <= 1:\n",
+    "                            active = False\n",
+    "                            guessing = False\n",
+    "                            if abs(R - float(text)) < 0.1:\n",
+    "                                current_points += 1\n",
+    "                            else:\n",
+    "                                life_slots -= 1\n",
+    "                        else:\n",
+    "                            text = '0.'\n",
+    "                            active = False\n",
+    "                    except:\n",
+    "                        print(\"fail\")\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "                elif event.key == pygame.K_BACKSPACE:\n",
+    "                    text = text[:-1]\n",
+    "                else:\n",
+    "                    text += event.unicode\n",
+    "            \n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and not guessing:\n",
+    "                if next_button.collidepoint(event.pos):\n",
+    "                    R = random.randint(0, 100)/100\n",
+    "                    x, y = generate_points_with_correlation(R)\n",
+    "\n",
+    "                    guessing = True\n",
+    "                    text = '0.'\n",
+    "                    active = False\n",
     "\n",
     "        pygame.display.flip()\n",
     "        # Cap the frame rate to 60 fps\n",
@@ -249,9 +347,6 @@
     "\n",
     "def plot_points_with_pygame(x, y, screen, graph_x, graph_y, graph_size):\n",
     "    # Define colors\n",
-    "    black = (0, 0, 0)\n",
-    "    red = (255, 0, 0)\n",
-    "    \n",
     "    # Scale the points to fit the screen\n",
     "    x_scaled = (x - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
     "    y_scaled = height - (y - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
@@ -522,7 +617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
