--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -20,14 +12,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -43,11 +27,10 @@
     "pygame.init()\n",
     "\n",
     "# Set up display\n",
-    "screen = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
-    "pygame.display.set_caption(\"El Examen\")\n",
-    "\n",
     "info = pygame.display.Info()\n",
     "width, height = info.current_w, info.current_h\n",
+    "screen = pygame.display.set_mode((width, height))\n",
+    "pygame.display.set_caption(\"El Examen\")\n",
     "\n",
     "# Colors\n",
     "white = (255, 255, 255)\n",
@@ -161,7 +144,7 @@
     "\n",
     "def Math_Game_Uno():\n",
     "    global running\n",
-    "    math_game_uno = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
+    "    math_game_uno = pygame.display.set_mode((width, height))\n",
     "    pygame.display.set_caption('Math uno')\n",
     "    clock = pygame.time.Clock()\n",
     "    fps = 60  # Set the desired frames per second\n",
@@ -371,7 +354,7 @@
     "\n",
     "def Math_Game_Dos():\n",
     "    global running\n",
-    "    math_game_dos = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
+    "    math_game_dos = pygame.display.set_mode((width, height))\n",
     "    pygame.display.set_caption('Constant Runner')\n",
     "    clock = pygame.time.Clock()\n",
     "    fps = 60  # Set the desired frames per second\n",
@@ -576,34 +559,34 @@
     "\n",
     "    dropdown_dynamics(screen, dropdown, home_button, close_button)\n",
     "\n",
-    "    subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
-    "    subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
-    "    subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
+    "    subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math', 'Game 1', 'Game 2', 'Game 3')\n",
+    "    subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_chem, 'Chemistry', 'Game 1', 'Game 2', 'Game 3')\n",
+    "    subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_eng, 'English', 'Game 1', 'Game 2', 'Game 3')\n",
     "    \n",
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "                if close_button.collidepoint(mouse_x,mouse_y):\n",
-    "                    running = False\n",
-    "                if subbutton_math_1 and subbutton_math_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_Uno()\n",
-    "                if subbutton_math_2 and subbutton_math_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_Dos()\n",
-    "                if subbutton_math_3 and subbutton_math_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_Tres()\n",
-    "                if subbutton_eng_1 and subbutton_eng_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_Uno()\n",
-    "                if subbutton_eng_2 and subbutton_eng_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_Dos()\n",
-    "                if subbutton_eng_3 and subbutton_eng_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_Tres()\n",
-    "                if subbutton_chem_1 and subbutton_chem_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Chem_Game_Uno()\n",
-    "                if subbutton_chem_2 and subbutton_chem_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Chem_Game_Dos()\n",
-    "                if subbutton_chem_3 and subbutton_chem_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Chem_Game_Tres()\n",
+    "            if close_button.collidepoint(mouse_x, mouse_y):\n",
+    "                running = False\n",
+    "            if subbutton_math_1 and subbutton_math_1.collidepoint(mouse_x, mouse_y):\n",
+    "                Math_Game_Uno()\n",
+    "            if subbutton_math_2 and subbutton_math_2.collidepoint(mouse_x, mouse_y):\n",
+    "                Math_Game_Dos()\n",
+    "            if subbutton_math_3 and subbutton_math_3.collidepoint(mouse_x, mouse_y):\n",
+    "                Math_Game_Tres()\n",
+    "            if subbutton_chem_1 and subbutton_chem_1.collidepoint(mouse_x, mouse_y):\n",
+    "                Chem_Game_Uno()\n",
+    "            if subbutton_chem_2 and subbutton_chem_2.collidepoint(mouse_x, mouse_y):\n",
+    "                Chem_Game_Dos()\n",
+    "            if subbutton_chem_3 and subbutton_chem_3.collidepoint(mouse_x, mouse_y):\n",
+    "                Chem_Game_Tres()\n",
+    "            if subbutton_eng_1 and subbutton_eng_1.collidepoint(mouse_x, mouse_y):\n",
+    "                Eng_Game_Uno()\n",
+    "            if subbutton_eng_2 and subbutton_eng_2.collidepoint(mouse_x, mouse_y):\n",
+    "                Eng_Game_Dos()\n",
+    "            if subbutton_eng_3 and subbutton_eng_3.collidepoint(mouse_x, mouse_y):\n",
+    "                Eng_Game_Tres()\n",
     "                \n",
-    "# Update the display\n",
+    "    # Update the display\n",
     "    pygame.display.flip()\n",
     "\n",
     "    # Cap the frame rate to 60 fps\n",
